ecs-deploy-dockerfile/cloudformation/sui-indexer-alt-cf.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Sui Indexer Alt on ECS'

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: The VPC where resources will be deployed
  
  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: List of subnet IDs where the ECS tasks can run
  
  DBUsername:
    Type: String
    Default: postgres
    Description: Username for the PostgreSQL database
  
  DBPassword:
    Type: String
    NoEcho: true
    Description: Password for the PostgreSQL database
  
  DBInstanceClass:
    Type: String
    Default: db.t3.medium
    Description: RDS instance class

Resources:
  # Database for Indexer
  IndexerDB:
    Type: AWS::RDS::DBInstance
    Properties:
      Engine: postgres
      DBName: sui_indexer
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      DBInstanceClass: !Ref DBInstanceClass
      AllocatedStorage: 100
      StorageType: gp2
      MultiAZ: true
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref DBSecurityGroup
  
  # DB Subnet Group
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for Sui Indexer database
      SubnetIds: !Ref SubnetIds
  
  # Security Group for Database
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Sui Indexer database
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref ECSSecurityGroup
  
  # ECS Cluster
  Cluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: SuiIndexerCluster
  
  # Log Group
  LogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: /ecs/sui-indexer
      RetentionInDays: 30
  
  # ECS Task Execution Role
  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
  
  # ECS Task Role
  ECSTaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchFullAccess
  
  # Security Group for ECS
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Sui Indexer on ECS
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 9184
          ToPort: 9184
          CidrIp: 0.0.0.0/0
  
  # Task Definition
  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: sui-indexer-alt
      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn
      TaskRoleArn: !GetAtt ECSTaskRole.Arn
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: '2048'
      Memory: '4096'
      ContainerDefinitions:
        - Name: sui-indexer-alt
          Image: mysten/sui-indexer-alt:testnet
          Essential: true
          Environment:
            - Name: RUST_LOG
              Value: info
            - Name: DB_HOST
              Value: !GetAtt IndexerDB.Endpoint.Address
            - Name: DB_PORT
              Value: '5432'
            - Name: DB_USER
              Value: !Ref DBUsername
            - Name: DB_NAME
              Value: sui_indexer
            - Name: RPC_URL
              Value: http://sui-fullnode.${AWS::StackName}.local:9000
            - Name: POSTGRES_URL
              Value: !Sub postgres://${DBUsername}:${DBPassword}@${IndexerDB.Endpoint.Address}:5432/sui_indexer
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref LogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: sui-indexer
          PortMappings:
            - ContainerPort: 9184
              HostPort: 9184
              Protocol: tcp
  
  # ECS Service
  Service:
    Type: AWS::ECS::Service
    DependsOn: IndexerDB
    Properties:
      ServiceName: sui-indexer-alt-service
      Cluster: !Ref Cluster
      TaskDefinition: !Ref TaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: ENABLED
          SecurityGroups:
            - !Ref ECSSecurityGroup
          Subnets: !Ref SubnetIds

Outputs:
  ClusterName:
    Description: Name of the ECS cluster
    Value: !Ref Cluster
    
  ServiceName:
    Description: Name of the ECS service
    Value: !Ref Service
    
  TaskDefinition:
    Description: Task definition for the Sui Indexer
    Value: !Ref TaskDefinition
    
  DatabaseEndpoint:
    Description: Endpoint of the RDS instance
    Value: !GetAtt IndexerDB.Endpoint.Address
